--- a/app/views/public/home/show.html.erb
+++ b/app/views/public/home/show.html.erb
@@ -1,6 +1,6 @@
 <div class="home">
   <div class="home-top-img-wrap">
-    <%= image_tag('home/top-title.png', class: 'sm-max-img home-top-title-img display') %>
+    <%= image_tag('home/top-title.png', class: 'home-top-title-img sm-max-img display') %>
     <%= image_tag('home/top-title-sp.png', class: 'sm-max-img home-top-title-img sm-display') %>
   </div>
   <div class="home-about-us-wrap">
