update/公開側の求職者の皆様へ画面の文言の変更と、デザインエラーの修正、スタッフインタビューを一人追加

--- a/app/views/public/lbr/_interview.html.erb
+++ b/app/views/public/lbr/_interview.html.erb
@@ -1,6 +1,6 @@
 <div class="interview-wrap">
   <div class="interview-content">
-    <div class="interview-title"><%= image_tag('lbr/interview-title.png', class: 'interview-title-img') %></div>
+    <div class="interview-title"><%= image_tag('lbr/interview-title.png', class: 'interview-title-img sm-max-img') %></div>
     <div class="interview-card-box">
       <div class="interview-card">
         <div class="staff-img"><%= image_tag('lbr/staff1.png', class: 'owner-img') %></div>
@@ -32,6 +32,16 @@
         <div class="staff-text">
           お客さまが満足する<br>
           焼き鳥を焼いていきたい
+        </div>
+      </div>
+      <div class="interview-card">
+        <div class="staff-img"><%= image_tag('lbr/staff4.png', class: 'owner-img') %></div>
+        <div class="staff-post">野田スタッフ</div>
+        <div class="staff-name">野田 渚<span class="staff-name-en">NAGISA NODA</span></div>
+        <div class="employ-date">2022年8月入社</div>
+        <div class="staff-text">
+          しっかりと後輩指導ができる<br>
+          教育体制に力を入れたい
         </div>
       </div>
     </div>
