--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -2117,6 +2117,11 @@ input[name="tab_item"] {
   height: 40px;
 }
 
+.owner-img {
+  width: 100%;
+  height: auto;
+}
+
 .owner-message-text-box {
   margin-top: 60px;
   font-size: 16px;
@@ -2141,6 +2146,11 @@ input[name="tab_item"] {
   color: #000000;
 }
 
+.owner-post {
+  font-size: 18px;
+  margin-right: 20px;
+}
+
 @media screen and (max-width: 767px) {
   .owner-message-wrap {
     padding: 40px 0;
@@ -2160,11 +2170,6 @@ input[name="tab_item"] {
     height: 28px;
   }
 
-  .owner-img {
-    width: 100%;
-    height: auto;
-  }
-
   .owner-message-text-box {
     margin-top: 20px;
   }
@@ -2172,11 +2177,15 @@ input[name="tab_item"] {
   .owner-message-text {
     margin-bottom: 15px;
   }
-}
 
-.owner-post {
-  font-size: 18px;
-  margin-right: 20px;
+  .owner-name {
+    font-size: 24px;
+  }
+
+  .owner-post {
+    font-size: 16px;
+    margin-right: 10px;
+  }
 }
 
 .interview-wrap {
@@ -2193,6 +2202,10 @@ input[name="tab_item"] {
 .interview-card-box {
   display: flex;
   justify-content: space-between;
+}
+
+.interview-card:nth-child(-n+3) {
+  margin-right: 20px;
 }
 
 .interview-title-img {
@@ -2221,6 +2234,7 @@ input[name="tab_item"] {
 
   .interview-card {
     padding-bottom: 30px;
+    margin-right: 0;
   }
 
   .interview-title {
