--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -54,6 +54,18 @@ ul {
   flex-direction: row-reverse ;
 }
 
+@media screen and (max-width: 767px) {
+  .sm-img {
+    width: 100%;
+    height: auto;
+  }
+}
+
+.sm-max-img {
+  max-width: 100%;
+  height: auto;
+}
+
 .error-icon {
   margin-right: 5px;
 }
@@ -1330,18 +1342,6 @@ ul {
   }
 }
 
-@media screen and (max-width: 767px) {
-  .sm-img {
-    width: 100%;
-    height: auto;
-  }
-}
-
-.sm-max-img {
-  max-width: 100%;
-  height: auto;
-}
-
 .form-fix-btn {
   width: 280px;
   height: 60px;
@@ -2300,8 +2300,8 @@ input[name="tab_item"] {
 .interview-section-title-wrap {
   width: 100%;
   height: 400px;
-  background-image: url('/assets/lbr/interview-section-img.png');
-  background-size: 100% auto;
+  background-image: url('/assets/lbr/staff2-interview-section.png');
+  background-size: 100% 100%;
   display: flex;
   align-items: center;
 }
@@ -2391,19 +2391,27 @@ input[name="tab_item"] {
 @media screen and (max-width: 767px) {
   .interview-section-title-wrap {
     width: 100%;
-    height: 300px;
-    background-size: 100% 100%;
+    background-image: none;
+    display: block;
+    height: auto;
   }
 
   .interview-section-title-box {
+    background-color: #F6F8FC;
     font-size: 18px;
     font-weight: 700;
-    margin-left: 25px;
+    margin-left: 0px;
+    padding: 40px 20px;
+    text-align: center !important;
   }
 
   .interview-title-img {
     width: 220px;
     height: 28px;
+  }
+
+  .interview-section-title-img {
+    margin-bottom: 15px;
   }
 
   .staff-interview-content-box {
@@ -2440,6 +2448,11 @@ input[name="tab_item"] {
   .staff-interview-content-title {
     font-size: 20px;
     margin-bottom: 10px;
+  }
+
+  .staff-post-box {
+    display: flex;
+    justify-content: center;
   }
 }
 
@@ -3057,6 +3070,10 @@ input[name="tab_item"] {
   .contact-btn-box .btn {
     width: 400px;
   }
+
+  .contact-as-radio {
+  margin: 10px 20px 0 0;
+}
 }
 
 
