--- a/app/views/public/lbr/staff_interview.html.erb
+++ b/app/views/public/lbr/staff_interview.html.erb
@@ -1,9 +1,12 @@
 <div class="interview-section-title-wrap">
+  <div class="sm-display"><%= image_tag('lbr/staff2-sp-interview-section.png', class: 'staff-show-img') %></div>
   <div class="interview-section-title-box">
     <h1 class="interview-section-title-img"><%= image_tag('lbr/interview-title.png', class: 'interview-title-img') %></h1>
     <p>自分が成長できる</p>
     <p>楽しい職場をつくりたい</p>
-    <div class="staff-post">野田本店店長</div>
+    <div  class="staff-post-box">
+      <div class="staff-post">野田本店店長</div>
+    </div>
     <div class="staff-name">松村 紘平<span class="staff-name-en">KOHEI MATSUMURA</span></div>
     <div class="employ-date">2023年3月入社</div>
   </div>
