--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -433,9 +433,9 @@ ul {
 
 .section-title-box {
   width: 100%;
-  height: 250px;
+  height: 273px;
   background-image: url('/assets/section-image.png');
-  background-size: 100% 100%;
+  background-size: cover;
   display: flex;
   align-items: center;
 }
@@ -451,7 +451,7 @@ ul {
   .section-title-box {
     width: 100%;
     height: 150px;
-    background-size: 100% 100%;
+    background-size: cover;
   }
 
   .section-title {
@@ -1386,7 +1386,7 @@ ul {
 // restaurant
 .home-restaurant-wrap {
   width: 100%;
-  background-size: 100% auto;
+  background-size: cover;
   background-image: url('/assets/home/restaurant.png');
   padding: 70px 0;
 }
@@ -1394,7 +1394,7 @@ ul {
 @media screen and (max-width: 767px) {
   .home-restaurant-wrap {
     padding: 40px 0;
-    background-size: 100% auto;
+    background-size: cover;
     background-image: url('/assets/home/restaurant-sp.png');
   }
 }
@@ -2301,7 +2301,7 @@ input[name="tab_item"] {
   width: 100%;
   height: 400px;
   background-image: url('/assets/lbr/staff2-interview-section.png');
-  background-size: 100% 100%;
+  background-size: cover;
   display: flex;
   align-items: center;
 }
