--- a/app/views/public/lbr/staff_interview2.html.erb
+++ b/app/views/public/lbr/staff_interview2.html.erb
@@ -1,4 +1,4 @@
-<div class="interview-section-title-wrap">
+<div class="interview-section-title-wrap interview2">
   <div class="sm-display"><%= image_tag('lbr/staff2-sp-interview-section.png', class: 'staff-show-img') %></div>
   <div class="interview-section-title-box">
     <h1 class="interview-section-title-img"><%= image_tag('lbr/interview-title.png', class: 'interview-title-img') %></h1>
