--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -2313,10 +2313,25 @@ input[name="tab_item"] {
 .interview-section-title-wrap {
   width: 100%;
   height: 400px;
-  background-image: url('/assets/lbr/staff2-interview-section.png');
   background-size: cover;
   display: flex;
   align-items: center;
+}
+
+.interview1 {
+  background-image: url('/assets/lbr/staff1-interview-section.png');
+}
+
+.interview2 {
+  background-image: url('/assets/lbr/staff2-interview-section.png');
+}
+
+.interview3 {
+  background-image: url('/assets/lbr/staff3-interview-section.png');
+}
+
+.interview4 {
+  background-image: url('/assets/lbr/staff4-interview-section.png');
 }
 
 .interview-section-title-box {
@@ -2333,6 +2348,11 @@ input[name="tab_item"] {
 
 .interview-section-title-img {
   margin-bottom: 6px;
+}
+
+.interview-section-title-box .staff-name {
+  font-size: 24px;
+  margin-bottom: 7px;
 }
 
 .staff-interview-wrap-white {
@@ -2373,7 +2393,7 @@ input[name="tab_item"] {
 
 .staff-show-img {
   width: 500px;
-  height: 400px;
+  height: auto;
 }
 
 .staff-interview-content-info {
