--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -752,8 +752,8 @@ ul {
 }
 
 .icon-img {
-  width: 241px;
-  height: 43px;
+  width: auto;
+  height: 42px;
 }
 
 .footer-content-box2 {
@@ -1228,13 +1228,13 @@ ul {
 }
 
 .about-us-title-img {
-  width: 213px;
-  height: 31px;
+  width: auto;
+  height: 32px;
 }
 
 @media screen and (max-width: 767px) {
   .about-us-title-img {
-    width: 145px;
+    width: auto;
     height: 24px;
   }
 }
@@ -1429,13 +1429,13 @@ ul {
 }
 
 .restaurant-title-img {
-  width: 282px;
-  height: 30px;
+  width: auto;
+  height: 32px;
 }
 
 @media screen and (max-width: 767px) {
   .restaurant-title-img {
-    width: 195px;
+    width: auto;
     height: 24px;
   }
 }
@@ -1510,13 +1510,13 @@ ul {
 }
 
 .carrer-title-img {
-  width: 128px;
+  width: auto;
   height: 28px;
 }
 
 @media screen and (max-width: 767px) {
   .carrer-title-img {
-    width: 100px;
+    width: auto;
     height: 24px;
   }
 }
@@ -1568,13 +1568,13 @@ ul {
 }
 
 .news-title-img {
-  width: 128px;
-  height: 30px;
+  width: auto;
+  height: 32px;
 }
 
 @media screen and (max-width: 767px) {
   .news-title-img {
-    width: 87px;
+    width: auto;
     height: 24px;
   }
 }
@@ -1828,7 +1828,7 @@ input[name="tab_item"] {
 }
 
 .dream-title-img {
-  width: 296px;
+  width: auto;
   height: 40px;
 }
 
@@ -1873,7 +1873,7 @@ input[name="tab_item"] {
 }
 
 .mission-title-img {
-  width: 310px;
+  width: auto;
   height: 40px;
 }
 
@@ -1901,7 +1901,7 @@ input[name="tab_item"] {
   }
 
   .dream-title-img {
-    width: 205px;
+    width: auto;
     height: 28px;
   }
 
@@ -1962,7 +1962,7 @@ input[name="tab_item"] {
 }
 
 .merit-title-img {
-  width: 350px;
+  width: auto;
   height: 40px;
 }
 
@@ -2042,7 +2042,7 @@ input[name="tab_item"] {
   }
 
   .merit-title-img {
-    width: 250px;
+    width: auto;
     height: 28px;
   }
 
@@ -2129,8 +2129,8 @@ input[name="tab_item"] {
 }
 
 .message-title-img {
-  width: 252px;
-  height: 40px;
+  width: auto;
+  height: 42px;
 }
 
 .owner-img {
@@ -2182,7 +2182,7 @@ input[name="tab_item"] {
   }
 
   .message-title-img {
-    width: 176px;
+    width: auto;
     height: 28px;
   }
 
@@ -2225,8 +2225,8 @@ input[name="tab_item"] {
 }
 
 .interview-title-img {
-  width: 340px;
-  height: 40px;
+  width: auto;
+  height: 42px;
 }
 
 .interview-title {
@@ -2258,7 +2258,7 @@ input[name="tab_item"] {
   }
 
   .interview-title-img {
-    width: 230px;
+    width: auto;
     height: 28px;
   }
 }
@@ -2345,8 +2345,8 @@ input[name="tab_item"] {
 }
 
 .interview-title-img {
-  width: 300px;
-  height: 37px;
+  width: auto;
+  height: 42px;
 }
 
 .interview-section-title-img {
@@ -2442,7 +2442,7 @@ input[name="tab_item"] {
   }
 
   .interview-title-img {
-    width: 220px;
+    width: auto;
     height: 28px;
   }
 
@@ -2509,8 +2509,8 @@ input[name="tab_item"] {
 }
 
 .premium-title-img {
-  width: 285px;
-  height: 40px;
+  width: auto;
+  height: 42px;
 }
 
 .premium-text-box {
@@ -2536,7 +2536,7 @@ input[name="tab_item"] {
   }
 
   .premium-title-img {
-    width: 200px;
+    width: auto;
     height: 28px;
   }
 
@@ -3131,8 +3131,8 @@ input[name="tab_item"] {
 }
 
 .profile-title-img {
-  width: 240px;
-  height: 40px;
+  width: auto;
+  height: 42px;
 }
 
 .job-profile-title,
@@ -3172,8 +3172,8 @@ input[name="tab_item"] {
 }
 
 .system-title-img {
-  width: 290px;
-  height: 40px;
+  width: auto;
+  height: 42px;
 }
 
 .job-system-wrap {
@@ -3260,7 +3260,7 @@ input[name="tab_item"] {
 
 .job-carrer-step-title-img {
   width: auto;
-  height: 40px;
+  height: 42px;
 }
 
 .job-carrer-step-text {
@@ -3290,8 +3290,8 @@ input[name="tab_item"] {
 }
 
 .enrtry-title-img {
-  width: 170px;
-  height: 40px;
+  width: auto;
+  height: 42px;
 }
 
 .job-entry-card {
@@ -3343,7 +3343,7 @@ input[name="tab_item"] {
   }
 
   .profile-title-img {
-    width: 168px;
+    width: auto;
     height: 28px;
   }
 
@@ -3430,7 +3430,7 @@ input[name="tab_item"] {
   }
 
   .enrtry-title-img {
-    width: 120px;
+    width: auto;
     height: 28px;
   }
 
