update/公開側の細かなデザインを変更 会社概要画面のスマホサイズのpaddingの変更 Lbrとはいあっている部分をLBRに変更

--- a/app/views/public/company/show.html.erb
+++ b/app/views/public/company/show.html.erb
@@ -11,7 +11,7 @@
           </th>
           <td class="col-md-8">
             <span class="company-form">
-              株式会社LBrestaurant
+              LBrestaurant株式会社
             </span>
           </td>
         </tr>
