--- a/app/views/public/shared/_footer.html.erb
+++ b/app/views/public/shared/_footer.html.erb
@@ -14,7 +14,7 @@
     </div>
     <div class="footer-content2">
       <div class="footer-link-box">
-        <div class="footer-link1"><%= link_to "Lbrの特徴", lbr_index_path %></div>
+        <div class="footer-link1"><%= link_to "LBRの特徴", lbr_index_path %></div>
         <div class="footer-link2"><%= link_to "採用情報", job_entries_path %></div>
       </div>
       <div class="footer-link-box">
