--- a/app/views/public_notification_mailer/job_entry_notification.html.erb
+++ b/app/views/public_notification_mailer/job_entry_notification.html.erb
@@ -5,7 +5,7 @@
   </head>
   <body>
     <p><%= @job_entry.name %>様</p>
-    <p>お世話になっております。<br> 株式会社LBrestaurantです。</p>
+    <p>お世話になっております。<br> LBrestaurant株式会社です。</p>
 
     <p>この度は、弊社の求人にご応募いただきまして誠にありがとうございます。</p>
 
@@ -14,7 +14,7 @@
     <p>何かご不明な点等ございましたら、ご遠慮なくお問い合わせくださいませ。</p>
 
     <hr>
-    <p>株式会社LBrestaurant</p>
+    <p>LBrestaurant株式会社</p>
     <p>住所 : 大阪市福島区吉野3-8-3</p>
     <p>電話番号 : 06-6459-7396</p>
     <p>メールアドレス : kawamoto@lbrestaurant.net</p>
