--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -249,7 +249,7 @@ ul {
 
 .form-title-img {
   margin: auto;
-  height: 28px;
+  height: 34px;
 }
 
 .form-title2 {
@@ -2637,16 +2637,16 @@ input[name="tab_item"] {
   }
 
   .company-table th {
-    padding: 10px 0;
+    padding: 10px 15px;
   }
   
   .company-table td {
-    padding: 10px 0;
+    padding: 10px 15px;
   }
 
   .company-label,
   .company-form {
-    padding-left: 15px;
+    padding: 0;
   }
 
 }
