公開側のデザイン修正
求職者についてのメリットタイトル画像にmax-widthを設定
店舗の画像についてwidthを100%に設定

--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -2985,6 +2985,11 @@ input[name="tab_item"] {
   align-items: center;
 }
 
+.shop-img {
+  width: 100%;
+  height: auto;
+}
+
 @media screen and (max-width: 767px) {
   .shop-content-box {
     max-width: none !important;
