--- a/app/views/public/lbr/show.html.erb
+++ b/app/views/public/lbr/show.html.erb
@@ -40,7 +40,7 @@
 </div>
 <div class="lbr-merit-wrap">
   <div class="lbr-merit-content-box">
-    <div class="lbr-merit-title"><%= image_tag('lbr/merit-title.png', class: 'merit-title-img') %></div>
+    <div class="lbr-merit-title"><%= image_tag('lbr/merit-title.png', class: 'merit-title-img sm-max-img') %></div>
     <div class="lbr-merit-content">
       <div><%= image_tag('lbr/merit-img1.png', class: 'merit-img') %></div>
       <div class="lbr-merit-content-info lbr-merit-margin-left">
