update/公開側のサシ飯ページの電話番号を正しいものに変更

--- a/app/views/public/lbr/premium.html.erb
+++ b/app/views/public/lbr/premium.html.erb
@@ -14,7 +14,7 @@
       <p>社長と飲み食いしながらざっくばらんにお話しください！</p>
     </div>
     <div class="premium-link">
-      <%= link_to 'サシメシ電話はこちら', "tel:+1234567890", class: 'user-btn premium-btn' %>
+      <%= link_to 'サシメシ電話はこちら', 'tel:+81664597396', class: 'user-btn premium-btn' %>
     </div>
   </div>
 </div>
