--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -243,7 +243,7 @@ ul {
 
 
 .form-title {
-  margin-bottom: 25px;
+  margin-bottom: 50px;
   text-align: center;
 }
 
@@ -266,15 +266,19 @@ ul {
 }
 
 @media (max-width: 767px){
+  .form-title {
+    margin-bottom: 25px;
+  }
+
   .form-title2 {
-    margin-bottom: 0.5rem;
-    margin-top: 1.5rem;
+    margin-bottom: 25px;
+    margin-top: 30px;
   }
 }
 
 @media (max-width: 767px){
   .form-subtitle {
-    margin-bottom: 1.5rem;
+    margin: 0 20px 15px;
   }
 
   .form-title-img {
@@ -329,6 +333,11 @@ ul {
   position: relative;
 }
 
+.form-link,
+.form-link-box {
+  margin-top: 50px;
+}
+
 .icon-container {
   position: absolute;
   right: 60px;
@@ -376,6 +385,10 @@ ul {
 
   .form-fix-link:hover .confirm-icon {
     right: 15px;
+  }
+
+  .form-link-box {
+    padding: 0 15px;
   }
 }
 
