update/公開側のトップページのタイトル変更と、採用画面の募集要項の年齢制限を一部変更

--- a/app/views/public/job_entries/show.html.erb
+++ b/app/views/public/job_entries/show.html.erb
@@ -60,7 +60,7 @@
         <div class="job-entry-card-text-icon-sm">
           <div class="job-entry-card-text-icon">年齢</div>
         </div>
-        <p class="job-entry-card-text">16~55歳</p>
+        <p class="job-entry-card-text">18~40歳ぐらいまで歓迎</p>
       </div>
       <div class="job-entry-card-text-box">
         <div class="job-entry-card-text-icon-sm">
