update/公開側の社員インタビュー1の画像の変更と社員インタビュー4の内容を変更

--- a/app/views/public/lbr/staff_interview4.html.erb
+++ b/app/views/public/lbr/staff_interview4.html.erb
@@ -19,7 +19,9 @@
         <h3 class="staff-interview-content-subtitle">Question.01</h3>
         <h2 class="staff-interview-content-title">入社の経緯</h2>
         <p class="staff-interview-content-text">
-          前職が佐藤さんと同職場で、社長と佐藤さんが誘ってくれたので働いてみようと思いました。
+          前職が佐藤さんと同じ職場で、社長と佐藤さんが誘ってくれたので働いてみようと思いました。
+          実際に働き始めてみると、みんなのやる気に日々刺激を受けています。
+          チームの一員として成長できる環境がここにはあり、毎日が新たな発見と学びでいっぱいです。
         </p>
       </div>
     </div>
@@ -46,8 +48,9 @@
         <h3 class="staff-interview-content-subtitle">Question.03</h3>
         <h2 class="staff-interview-content-title">今後の目標について</h2>
         <p class="staff-interview-content-text">
-          歳下のバイトの子たちを教えたことがなかったので<br>
-          しっかり教えれるようになりたいです。
+          歳下のバイトの子たちを教えたことがなかったので、しっかり教えれるようになりたいです。
+          また、ホールでの細やかな配慮や迅速な対応を心がけています。
+          今後は、チームワークをさらに深め、お店全体の質を高めることが目標です。
         </p>
       </div>
     </div>
@@ -59,7 +62,8 @@
       <h3 class="staff-interview-content-subtitle">Question.04</h3>
       <h2 class="staff-interview-content-title">将来入ってくるメンバーに一言</h2>
       <p class="staff-interview-content-text">
-        頑張れ！！！
+        ここにはチャレンジと成長できる環境があります。<br>
+        一緒に仕事をする中で、お互いに学び合い、成長できる関係を築き上げていきましょう。
       </p>
     </div>
   </div>
