--- a/app/views/public/lbr/show.html.erb
+++ b/app/views/public/lbr/show.html.erb
@@ -82,24 +82,23 @@
 <div class="lbr-img-wrap">
   <div class="swiper swiper1">
     <div class="swiper-wrapper">
-      <div class="swiper-slide"><%= image_tag('lbr/merit-img1.png', class: "swiper1-img") %></div>
-      <div class="swiper-slide"><%= image_tag('lbr/merit-img2.png', class: "swiper1-img") %></div>
-      <div class="swiper-slide"><%= image_tag('lbr/staff1-interview-img2.png', class: "swiper1-img") %></div>
-      <div class="swiper-slide"><%= image_tag('lbr/merit-img3.png', class: "swiper1-img") %></div>
-      <div class="swiper-slide"><%= image_tag('lbr/staff3-sp-interview-section.png', class: "swiper1-img") %></div>
-      <div class="swiper-slide"><%= image_tag('lbr/staff2-interview-img2.png', class: "swiper1-img") %></div>
-      <div class="swiper-slide"><%= image_tag('lbr/staff2-interview-img1.png', class: "swiper1-img") %></div>
+      <div class="swiper-slide"><%= image_tag('lbr/merit-img1.png', class: "swiper-img") %></div>
+      <div class="swiper-slide"><%= image_tag('lbr/staff4-interview-img1.png', class: "swiper-img") %></div>
+      <div class="swiper-slide"><%= image_tag('lbr/staff1-interview-img1.png', class: "swiper-img") %></div>
+      <div class="swiper-slide"><%= image_tag('lbr/merit-img3.png', class: "swiper-img") %></div>
+      <div class="swiper-slide"><%= image_tag('lbr/staff2-interview-img2.png', class: "swiper-img") %></div>
+      <div class="swiper-slide"><%= image_tag('lbr/staff3-interview-img2.png', class: "swiper-img") %></div>
     </div>
   </div>
   <div class="swiper swiper2">
     <div class="swiper-wrapper">
-      <div class="swiper-slide"><%= image_tag('lbr/merit-img1.png', class: "swiper2-img") %></div>
-      <div class="swiper-slide"><%= image_tag('lbr/merit-img2.png', class: "swiper2-img") %></div>
-      <div class="swiper-slide"><%= image_tag('lbr/merit-img3.png', class: "swiper2-img") %></div>
-      <div class="swiper-slide"><%= image_tag('lbr/staff3-sp-interview-section.png', class: "swiper2-img") %></div>
-      <div class="swiper-slide"><%= image_tag('lbr/merit-img5.png', class: "swiper2-img") %></div>
-      <div class="swiper-slide"><%= image_tag('lbr/staff1-interview-img2.png', class: "swiper2-img") %></div>
-      <div class="swiper-slide"><%= image_tag('lbr/staff4-interview-img1.png', class: "swiper2-img") %></div>
+      <div class="swiper-slide"><%= image_tag('lbr/merit-img2.png', class: "swiper-img") %></div>
+      <div class="swiper-slide"><%= image_tag('lbr/staff2-interview-img1.png', class: "swiper-img") %></div>
+      <div class="swiper-slide"><%= image_tag('lbr/staff3-sp-interview-section.png', class: "swiper-img") %></div>
+      <div class="swiper-slide"><%= image_tag('lbr/merit-img5.png', class: "swiper-img") %></div>
+      <div class="swiper-slide"><%= image_tag('lbr/staff1-interview-img2.png', class: "swiper-img") %></div>
+      <div class="swiper-slide"><%= image_tag('lbr/staff4-interview-img2.png', class: "swiper-img") %></div>
+      <div class="swiper-slide"><%= image_tag('lbr/owner.png', class: "swiper-img") %></div>
     </div>
   </div>
 </div>
