update/公開側のmeta_tagsを個別に設定

--- a/app/views/public/company/show.html.erb
+++ b/app/views/public/company/show.html.erb
@@ -1,3 +1,12 @@
+<% set_meta_tags  title: '会社概要',
+                  description: 'LBrestaurant株式会社の公式ホームページ。LBrestaurant株式会社の会社概要ページです。社名：LBrestaurant株式会社 設立：2022年12月28日 本社所在地：553−0006 大阪府大阪市福島区吉野３丁目８番３号',
+                  canonical: 'https://lbrestaurant.net/company/',
+                  og: {
+                        title: '会社概要 | LBrestaurant(株式会社)公式サイト(暖簾分け希望者、求職者募集中!)',
+                        description: 'LBrestaurant株式会社の公式ホームページ。LBrestaurant株式会社の会社概要ページです。社名：LBrestaurant株式会社 設立：2022年12月28日 本社所在地：553−0006 大阪府大阪市福島区吉野３丁目８番３号',
+                        url: 'https://lbrestaurant.net/company/'
+                       }
+%>
 <%= render partial: 'public/shared/section-title', locals: { section_title: '会社概要' } %>
 <div class="company-wrap">
   <div class="company-content">
