--- a/app/views/public/job_entries/show.html.erb
+++ b/app/views/public/job_entries/show.html.erb
@@ -1,3 +1,10 @@
+<% set_meta_tags  title: '採用情報',
+                  canonical: 'https://lbrestaurant.net/job_entries/',
+                  og: {
+                    title: '採用情報 | LBrestaurant(株式会社)公式サイト(暖簾分け希望者、求職者募集中!)',
+                    url: 'https://lbrestaurant.net/job_entries/'
+                  }
+%>
 <%= render partial: 'public/shared/section-title', locals: { section_title: '採用情報' } %>
 <div class="job-profile-wrap">
   <div class="job-profile-content">
