update/ファビコンのデザイン変更と、公開側のトップ画面のサシ飯コンテンツ、社員インタビューコンテンツ、採用情報画面の制度コンテンツのcssの変更

--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -1319,7 +1319,7 @@ ul {
 }
 
 .home-premium-title-box {
-  padding: 15px 0;
+  padding: 60px 0 15px 0;
   background-color: #FFFFFF;
   font-weight: 900;
   text-align: center;
@@ -1587,7 +1587,6 @@ ul {
 .home-news-wrap {
   width: 100%;
   background-color: #FFF7E3;
-  border: 6px solid #000000;
 }
 
 .home-news-wrap button {
@@ -2216,7 +2215,7 @@ input[name="tab_item"] {
 .interview-wrap {
   width: 100%;
   background-color: #FFF7E3;
-  padding: 40px 0px 120px;
+  padding: 60px 0px 120px;
 }
 
 .interview-content {
@@ -3241,7 +3240,7 @@ input[name="tab_item"] {
 }
 
 .job-system-card-text {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 700;
   line-height: 30px;
   text-align: center;
