update/公開側のmeta_tagsを全てのファイルに適応

--- a/app/views/public/job_entries/confirm.html.erb
+++ b/app/views/public/job_entries/confirm.html.erb
@@ -1,3 +1,5 @@
+<% set_meta_tags noindex: true %>
+
 <div class="form-wrap">
   <div class="form-content">
     <div class="form-title"><%= image_tag('job_entry/confirm-title.png', class: 'form-title-img sm-max-img') %></div>
