--- a/app/views/public/job_entries/show.html.erb
+++ b/app/views/public/job_entries/show.html.erb
@@ -1,10 +1,14 @@
 <% set_meta_tags  title: '採用情報',
+                  description: 'LBrestaurant株式会社の公式ホームページ。LBrestaurant株式会社の採用情報ページです。　他の企業にはないLBR独自の制度 「社長とサシ飯行きませんか？」 ブラックな飲食業界を変える！店長の高収入×店長の人間らしい生活を同時に達成する。',
                   canonical: 'https://lbrestaurant.net/job_entries/',
                   og: {
                     title: '採用情報 | LBrestaurant(株式会社)公式サイト(暖簾分け希望者、求職者募集中!)',
+                    description: 'LBrestaurant株式会社の公式ホームページ。LBrestaurant株式会社の採用情報ページです。　他の企業にはないLBR独自の制度 「社長とサシ飯行きませんか？」 ブラックな飲食業界を変える！店長の高収入×店長の人間らしい生活を同時に達成する。',
+                    type: 'article',
                     url: 'https://lbrestaurant.net/job_entries/'
                   }
 %>
+
 <%= render partial: 'public/shared/section-title', locals: { section_title: '採用情報' } %>
 <div class="job-profile-wrap">
   <div class="job-profile-content">
