--- a/app/views/public/lbr/premium.html.erb
+++ b/app/views/public/lbr/premium.html.erb
@@ -1,3 +1,14 @@
+<% set_meta_tags  title: '社長とサシ飯',
+                  description: 'LBrestaurant株式会社の公式ホームページ。他の企業にはないLBR独自の制度「社長とサシ飯行きませんか？」店舗に電話して日程を決める！その後、社長と飲み食いしながら、どういう企業なのか、何を目指しているのか、などざっくばらんにお話しください！',
+                  canonical: 'https://lbrestaurant.net/lbr/premium/',
+                  og: {
+                    title: '社長とサシ飯 | LBrestaurant(株式会社)公式サイト(暖簾分け希望者、求職者募集中!)',
+                    description: 'LBrestaurant株式会社の公式ホームページ。他の企業にはないLBR独自の制度「社長とサシ飯行きませんか？」店舗に電話して日程を決める！その後、社長と飲み食いしながら、どういう企業なのか、何を目指しているのか、などざっくばらんにお話しください！',
+                    type: 'article',
+                    url: 'https://lbrestaurant.net/lbr/premium/'
+                  }
+%>
+
 <%= render partial: 'public/shared/section-title', locals: { section_title: '社長とサシメシ' } %>
 <div class="premium-wrap">
   <div class="premium-content">
