--- a/app/views/public/lbr/show.html.erb
+++ b/app/views/public/lbr/show.html.erb
@@ -1,3 +1,18 @@
+<% set_meta_tags  title: 'LBrestaurantの特徴',
+                  description: 'LBrestaurant株式会社の公式ホームページ。LBrestaurant株式会社のLBrestaurantの特徴ページです。2023年に法人化した新しい会社です。様々な制度がまだまだ未完成です。
+                                【ないものは作るしかない】この精神でどんどんチャレンジすることが可能です。未経験のことでもどんどんやれる
+                                チャレンジ精神で、共に道を切り開きましょう！',
+                  canonical: 'https://lbrestaurant.net/lbr/',
+                  og: {
+                    title: 'LBrestaurantの特徴 | LBrestaurant(株式会社)公式サイト(暖簾分け希望者、求職者募集中!)',
+                    description: 'LBrestaurant株式会社の公式ホームページ。LBrestaurant株式会社のLBrestaurantの特徴ページです。2023年に法人化した新しい会社です。様々な制度がまだまだ未完成です。
+                                  【ないものは作るしかない】この精神でどんどんチャレンジすることが可能です。未経験のことでもどんどんやれる
+                                  チャレンジ精神で、共に道を切り開きましょう！',
+                    type: 'article',
+                    url: 'https://lbrestaurant.net/lbr/'
+                  }
+%>
+
 <%= render partial: 'public/shared/section-title', locals: { section_title: 'LBrestaurantの特徴' } %>
 <div class="lbr-dream-wrap">
   <div class="lbr-dream-content">
