--- a/app/views/public/lbr/staff_interview2.html.erb
+++ b/app/views/public/lbr/staff_interview2.html.erb
@@ -1,3 +1,14 @@
+<% set_meta_tags  title: '社員インタビュー2',
+                  description: 'LBrestaurant株式会社の公式ホームページ。LBrestaurant株式会社で働くスタッフをご紹介いたします! LBrestaurantで働くスタッフの生の声をお聞きいただき、嘘偽りない姿をご覧ください!',
+                  canonical: 'https://lbrestaurant.net/lbr/staff_interview2/',
+                  og: {
+                    title: '社員インタビュー2 | LBrestaurant(株式会社)公式サイト(暖簾分け希望者、求職者募集中!)',
+                    description: 'LBrestaurant株式会社の公式ホームページ。LBrestaurant株式会社で働くスタッフをご紹介いたします! LBrestaurantで働くスタッフの生の声をお聞きいただき、嘘偽りない姿をご覧ください!',
+                    type: 'article',
+                    url: 'https://lbrestaurant.net/lbr/staff_interview2/'
+                  }
+%>
+
 <div class="interview-section-title-wrap interview2">
   <div class="sm-display"><%= image_tag('lbr/staff2-sp-interview-section.png', class: 'staff-show-img') %></div>
   <div class="interview-section-title-box">
