--- a/app/views/public/contacts/complete.html.erb
+++ b/app/views/public/contacts/complete.html.erb
@@ -1,3 +1,5 @@
+<% set_meta_tags noindex: true %>
+
 <div class="formwrap">
   <div class="form-content">
     <div class="form-title"><%= image_tag('complete-title.png', class: 'form-title-img sm-max-img') %></div>
