--- a/app/views/public/lbr/message.html.erb
+++ b/app/views/public/lbr/message.html.erb
@@ -1,3 +1,16 @@
+<% set_meta_tags  title: '社長メッセージ',
+                  description: 'LBrestaurant株式会社の公式ホームページ。LBrestaurant株式会社の社長メッセージ。突然ですが、私には夢があります。私の夢はこのブラックな飲食業界を変えることです。
+                                そのためには、オーナー自身の覚悟が問われます。会社の存続と従業員を幸せにすることを同時に達成する覚悟です。このメッセージを見ているあなたも、ぜひともに飲食業界を憧れの業界にしていきませんか？',
+                  canonical: 'https://lbrestaurant.net/lbr/message/',
+                  og: {
+                    title: '社長メッセージ | LBrestaurant(株式会社)公式サイト(暖簾分け希望者、求職者募集中!)',
+                    description: 'LBrestaurant株式会社の公式ホームページ。LBrestaurant株式会社の社長メッセージ。突然ですが、私には夢があります。私の夢はこのブラックな飲食業界を変えることです。
+                                  そのためには、オーナー自身の覚悟が問われます。会社の存続と従業員を幸せにすることを同時に達成する覚悟です。このメッセージを見ているあなたも、ぜひともに飲食業界を憧れの業界にしていきませんか？',
+                    type: 'article',
+                    url: 'https://lbrestaurant.net/lbr/message/'
+                  }
+%>
+
 <%= render partial: 'public/shared/section-title', locals: { section_title: '求職者のみなさまへ' } %>
 <div class="owner-message-wrap">
   <div class="owner-message-content">
