--- a/app/views/public/news/index.html.erb
+++ b/app/views/public/news/index.html.erb
@@ -1,3 +1,14 @@
+<% set_meta_tags  title: 'ニュース',
+                  description: 'LBrestaurant株式会社の公式ホームページ。LBrestaurant株式会社のニュースです。　～LBrestaurantの日常を公開中！',
+                  canonical: 'https://lbrestaurant.net/news/',
+                  og: {
+                    title: 'ニュース | LBrestaurant(株式会社)公式サイト(暖簾分け希望者、求職者募集中!)',
+                    description: 'LBrestaurant株式会社の公式ホームページ。LBrestaurant株式会社のニュースです。　～LBrestaurantの日常を公開中！',
+                    type: 'article',
+                    url: 'https://lbrestaurant.net/news/'
+                  }
+%>
+
 <%= render partial: 'public/shared/section-title', locals: { section_title: 'ニュース' } %>
 <div class="news-wrap">
   <div class="tab_container clearfix">
